--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Olympic DataViz</title>
+    
 </head>
 <body>
-    
+
+<!-- Load d3.js -->
+<script src="https://d3js.org/d3.v7.min.js"></script>
+
+<div id="streamgraph-container"></div>
+
+        <script src="script.js"></script>
 </body>
+
+<!-- d3.sort(data, (d) => d.value)
+persos.splice(position, 1);//retire un élément par son index -->
 </html>
+
