fixed problem with input

--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@ width: 900px;
 <h1>Section 1. Changing medals in history</h1>
 <div id="div-section1" style="display: none;"><h1>AAAAAAAAAAAAAA</h1></div>
 
-<input type="range" id="year" value="1890" step="1">
+<input type="range" id="year" value="1890" >
 <div id="results"></div> 
+<div id="selected-year" ></div>
 
     </section>
 
