index.html avec front

--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@ width: 900px;
 </header>
 
 <body>
-
+    <div class="bloc_accueil">
+        <div class="logo"> <img src="./img/logo_paris2024.png" alt=""> </div>
+        <h1 class="dataviz">DATAVIZ <br>OLYMPIQUE</h1>
+    </div>
+    
 <section>counter how much medals were gained during the story of olympic games</section>
 
 
