--- a/index.html
+++ b/index.html
@@ -96,7 +96,13 @@
 
 
 
-
+<section class="info">
+    <div class="wrapper-info">
+        <div class="info-div"></div>
+        <div class="info-div"></div> 
+        <div class="info-div"></div>
+    </div>
+</section>
 
 
     <section id="section1-wrapp">
@@ -110,7 +116,7 @@
                     <p>AAAAAAAAAAAAAA</p>
                 </div>
             </div>
-            <div>
+            <div id="years">
                 <span>Year :</span>
                 <div id="selected-year"></div>
             </div>
