--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
 
         #section3 .tick:nth-of-type(4n-1) {
             color: red;
+            font-family: "Paris2024";
         }
 
         #section3 .tick:nth-of-type(4n-3) {
             color: blue;
+            font-family: "Paris2024";
         }
     </style>
 </head>
@@ -107,6 +109,7 @@
 
     <section id="section1-wrapp">
         <h2>What was the best score during the years? <br></h2>
+        <p id="section1-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
         <div id="bar-around">
             <div id="section1">
                 <input type="range" id="year" value="2000">
@@ -126,25 +129,10 @@
 
 
 
-
-
-
-
-
-
-    <section>
-        <h1>Section 2. steamgraph with medals</h1>
-
-
-
-    </section>
-
-
-
-    <section>
-        <h1>section 3</h1>
-
-
+    <section id="section3-wrapp">
+        <h2>Does the hosting country win more?</h2>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, quisquam! Neque, nemo molestiae amet eos ex corporis accusamus magni adipisci ut autem illum et vitae architecto perspiciatis vero debitis dolor?</p>
+<br><br>
         <select name="selectedTeam" id="selectedTeam"></select>
         <!-- to choose the country -->
 
