responsive second graphe

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             width: 70%;
         }
 
-        #section3 {}
-
-        /* Styling for red tick marks */
+        body{
+            min-width: 1024px;
+        }
 
         #section3 .tick:nth-of-type(4n-1) {
             color: red;
