--- a/index.html
+++ b/index.html
@@ -154,19 +154,22 @@ g:nth-of-type(1) .tick:nth-child(4n-2) {
 
 
 
-<section>
+<section  id="section-hosttop" >
+    <h2 >Olympic Hosting Champions: <br>Top 10 countries</h2>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum officia molestiae officiis inventore id! Asperiores beatae accusantium consequuntur aut, commodi nemo at similique voluptates ut maiores, a quis, vel molestias.</p>
     <div id="chart"></svg>
 
 </section>
 
 
-<section>
-    <h2>Champions</h2>
-    <p></p>
-    <div >
-        <ul id="top-athlets">
+<section id="section-champions">
+    <h2>Olympic Legends:  Top 10 all-time medal winners</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero est et ipsam! Architecto atque, quas accusantium quae perferendis, b 
+    </p>
+    <div id="champions">
+        <ol id="top-athlets">
             
-        </ul>
+        </ol>
     </div>
 </section>
 
