added comments to js
left to finish legal info

--- a/index.html
+++ b/index.html
@@ -238,12 +238,26 @@ g:nth-of-type(1) .tick:nth-child(4n-2) {
 
 <footer>
 <h1>Legal information</h1>    
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore mollitia labore dolores blanditiis error consectetur ut excepturi quaerat, accusantium molestias enim illum distinctio numquam eos saepe totam debitis, quia cupiditate!</p>
 
+<p>This project was collaboratively created by Daria Iarovaia and Andréa Laizeau.</p>
 
-<a href="https://www.kaggle.com/datasets/piterfm/olympic-games-medals-19862018">Olympic Summer & Winter Games, 1896-2022</a>
-<a href="https://www.kaggle.com/code/joshuaswords/does-hosting-the-olympics-improve-performance">Does hosting the Olympics improve performance?</a>
-<a href="https://www.kaggle.com/datasets/heesoo37/120-years-of-olympic-history-athletes-and-results">120 years of Olympic history: athletes and results</a>
+<div class="wrapper-footer">
+    <div>
+        <h3>Data Sources:</h3>
+        <ul>
+        <li><a href="https://www.kaggle.com/datasets/piterfm/olympic-games-medals-19862018">Olympic Summer & Winter Games, 1896-2022</a></li><br>
+        <li><a href="https://www.kaggle.com/code/joshuaswords/does-hosting-the-olympics-improve-performance">Does hosting the Olympics improve performance?</a></li><br>
+        <li><a href="https://www.kaggle.com/datasets/heesoo37/120-years-of-olympic-history-athletes-and-results">120 years of Olympic history: athletes and results</a></li><br>
+        </ul>
+    </div>
+    
+    <div>
+        <h3>Attribution and Credit:</h3>
+        <p>The project incorporates elements from the official Olympic site, including the Olympic logo and design concept. We would like to give full credit to the International Olympic Committee (IOC) and its associated organizations for these assets. <br>
+            This website is intended solely for educational purposes. It is not created or used for profit, commercial gain, or any form of revenue generation.  <br><br>
+            We would like to express our gratitude to our teachers for their valuable guidance, support, and mentorship throughout the development of this project.</p>
+    </div>
+</div>
 <span>2023 Univeristy of Gustav Eiffel - IUT Marne-la-Valée</span>
 
 </footer>
