last modification with texts

--- a/index.html
+++ b/index.html
@@ -134,15 +134,12 @@
             </svg>
         </div>
         <div class="exp1 exp">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est reprehenderit doloribus necessitatibus ullam
-                fugit voluptates, nihil minus nobis minima, quasi sint unde qui ex. Quo ullam doloribus similique
-                voluptas error.</p>
+            <p>
+                We are two second-year students in the Bachelor of Multimedia and Internet Professions (BUT Métiers du Multimédia et de l’Internet) program who have created this DataViz project. The main goal of the project was to develop a visual representation of a large amount of data and make them more accessible and representative through interactive graphics. </p>
         </div>
         <div class="line"></div>
         <div class="exp2 exp">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus illum nam possimus quo? Aperiam, magnam
-                aliquam harum sapiente nobis architecto minus similique tempora numquam accusamus repellendus eveniet
-                iure illum eum!</p>
+            <p>Given that Paris will be the host city for the 2024 Olympic Games, we wanted to foster interest in this event by presenting statistics on the number of medals throughout the history of the Games. We invite you to enjoy observing the various correlation links between the presented data, comparing the achievements of different nations over more than 100 years, and congratulating the absolute champions of the Games.</p>
         </div>
 
     </section>
