legal notice page added. Project is finished

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="eng">
 
 <head>
     <meta charset="UTF-8">
@@ -318,7 +318,8 @@
                     This website is intended solely for educational purposes. It is not created or used for profit,
                     commercial gain, or any form of revenue generation. <br><br>
                     We would like to express our gratitude to our teachers for their valuable guidance and
-                    mentorship throughout the development of this project.</p>
+                    mentorship throughout the development of this project.</p><br><br>
+                    <a href="legalinfo.html">Legal Notice (eng and fr)</a>
             </div>
         </div>
         <span>2023 Univeristy of Gustav Eiffel - IUT Marne-la-Valée</span>
